syntax = "proto3";

option csharp_namespace = "DIDAStorage.Proto";

/* this service specifies how to access the storage */
service DIDAStorageService {
  rpc read(DIDAReadRequest) returns (DIDARecordReply);
  rpc write(DIDAWriteRequest) returns (DIDAVersion);
  rpc updateIfValueIs(DIDAUpdateIfRequest) returns (DIDAVersion);
  rpc listServer(DIDAListServerRequest) returns (DIDAListServerReply);
  rpc crashServer(DIDACrashServerRequest) returns (DIDACrashServerReply);
  rpc status(StatusRequest) returns (StatusReply);
  rpc toggleDebug(ToggleDebugRequest) returns (ToggleDebugReply);
  rpc addStorage(AddStorageRequest) returns (AddStorageReply);
  rpc gossip(GossipMessage) returns (GossipReply);
  rpc livenessCheck(LivenessCheckRequest) returns (LivenessCheckReply);
  rpc removeFailedStorage(RemoveFailedStorageRequest) returns (RemoveFailedStorageReply);
}


message GossipMessage{
	repeated GossipLogEntry log = 1;
}

message GossipReply {


}

message AddStorageRequest {
	string host = 1;
	int32 port = 2;
	string id = 3;
}
message AddStorageReply {
	bool ok = 1;
}


message ToggleDebugRequest {

}
message ToggleDebugReply {
	bool debugStatus = 1;
}


message StatusRequest {}

message StatusReply {
	bool ok = 1;
}

message DIDACrashServerRequest {

}

message DIDACrashServerReply{
	bool ok = 1;
}

message DIDAReadRequest {
	string id = 1;  // the id of the object being read
	DIDAVersion version = 2;
	LamportClock clock = 3;
}

message DIDAListServerRequest{}

message DIDAListServerReply{
	repeated DIDACompleteRecord records = 1;
}


message DIDACompleteRecord{
	string id = 1;
	repeated DIDARecordReply versions = 2; // list of versions
}

message DIDARecordReply {
	string id = 1;
	DIDAVersion version = 2;
	string val = 3;
}

message DIDAVersion {
	int32 versionNumber = 1;
	int32 replicaId = 2;
	LamportClock clock = 3;
}

message DIDAWriteRequest {
	string id = 1;
	string val = 2;
	LamportClock clock = 3;
	int32 uniqueID = 4;
}

message DIDAUpdateIfRequest {
	string id = 1;
	string oldvalue = 2;
	string newvalue = 3;
}

message GossipLogEntry{
	int32 replicaID = 1;
	LamportClock updateTS = 2;
	LamportClock previousClock = 4;
	int32 updateIdentifier = 5;
	GossipOperation operation = 6;

	LamportClock replicaTS = 7;
}

message GossipOperation{
	string key = 1;
	string newValue = 2;
	int32 versionNumber = 3;
}

message LamportClock{
	repeated int32 values = 1;
}

message LivenessCheckRequest {}

message LivenessCheckReply {
	bool ok = 1;
}

message RemoveFailedStorageRequest{
	string id = 1;
}

message RemoveFailedStorageReply {}
